--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>KSR</title>
 </head>
 <body>
    <h1>Kasir Abbas</h1>
-   <h2></h2>
+   <h2>Software Developer</h2>
+   <h2>Weclcome to my Portfolio</h2>
+   <div class="images">
+       <img src="../IMG/Animation.png" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+   </div>
 </body>
 </html>
