--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
     <title>KSR</title>
 </head>
 <body>
+
+  <div class="card">
+    <img src="IMG/me.jpg" alt="KasirAbbas" style="width:100%">
+  </div>
+
    <h1>Kasir Abbas</h1>
-   <h2>Software Developer</h2>
+   
    <h2>Weclcome to my Portfolio</h2>
+
+   <div class="section1 box"></div>
+   
+   
+
+   <div class="section2 box">
+
+    <h2>Software Developer</h2>
+
+     <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code. Currently completing the CodeNation bootcamp based in Manchester.</p>
+     <p>I have in depth knowledge of HTML5, CSS3, JavaScript and design. With a desire to learn, no matter how hard it may be, as knowledge is Power.</p>
+   </div>
+
+   <div class="section3 box"></div>
+   <div class="section4 box"></div>
+
    <div class="images">
        <img src="../IMG/Animation.png" alt="">
        <img src="" alt="">
