--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
 
   <div class="card">
-    <img src="IMG/me.jpg" alt="KasirAbbas" style="width:100%">
+    <img src="IMG/me.jpg" alt="KasirAbbas">
   </div>
+  <div class="circle"></div>
 
    <h1>Kasir Abbas</h1>
    
-   <h2>Weclcome to my Portfolio</h2>
+   <h2>Welcome to my Portfolio</h2>
 
    <div class="section1 box"></div>
    
