--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="card">
-    <img src="IMG/me.jpg" alt="KasirAbbas">
+    <img src="../IMG/me.jpg" alt="KasirAbbas">
   </div>
   <div class="circle"></div>
 
@@ -25,22 +25,26 @@
 
    <div class="section2 box">
 
-    <h2>Software Developer</h2>
+    <h3>Software Developer</h3>
 
      <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code. Currently completing the CodeNation bootcamp based in Manchester.</p>
-     <p>I have in depth knowledge of HTML5, CSS3, JavaScript and design. With a desire to learn, no matter how hard it may be, as knowledge is Power.</p>
+     <p>I have in depth knowledge of HTML5, CSS3, JavaScript and design. With a desire to learn, no matter how hard it may be, as knowledge is building blocks to better socities.</p>
    </div>
 
    <div class="section3 box"></div>
-   <div class="section4 box"></div>
+   <div class="section4 box">
+     <h3>Showcase</h3>
+     <img src="../IMG/Animation.png" alt="">
 
-   <div class="images">
+   </div>
+
+   <!-- <div class="images">
        <img src="../IMG/Animation.png" alt="">
        <img src="" alt="">
        <img src="" alt="">
        <img src="" alt="">
        <img src="" alt="">
        <img src="" alt="">
-   </div>
+   </div> -->
 </body>
 </html>
