--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="card">
-    <img src="/IMG/me.jpg" alt="KasirAbbas">
+    <img src="../IMG/me.jpg" alt="KasirAbbas">
   </div>
   <div class="circle"></div>
 
