fixed picture bug
added picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="card">
-    <img src="/IMG/me.JPG" alt="KasirAbbas">
+    <img src="IMG/ka.jpg" alt="KasirAbbas">
   </div>
   <div class="circle"></div>
 
@@ -34,7 +34,7 @@
    <div class="section3 box"></div>
    <div class="section4 box">
      <h3>Showcase</h3>
-     <img src="../IMG/Animation.png" alt="">
+     <img src="IMG/Animation.png" alt="">
 
    </div>
 
