--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <h3>Software Developer</h3>
 
-     <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code. Currently completing the CodeNation bootcamp based in Manchester.</p>
+     <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code, tech and birds. Currently completing the CodeNation bootcamp.</p>
      <p>I have in depth knowledge of HTML5, CSS3, JavaScript and design. With a desire to learn, no matter how hard it may be, as knowledge is building blocks to better socities.</p>
    </div>
 
@@ -35,6 +35,7 @@
    <div class="section4 box">
      <h3>Showcase</h3>
      <img src="IMG/Animation.png" alt="">
+     <img src="IMG/codeLinks.png" alt="">
 
    </div>
 
