--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
 </head>
 <body>
 
-  <div class="card">
+  <!-- <div class="card">
     <img src="IMG/ka.jpg" alt="KasirAbbas">
   </div>
   <div class="circle"></div>
 
    <h1>Kasir Abbas</h1>
    
-   <h2>Welcome to my Portfolio</h2>
+   <h2>Welcome to my Portfolio</h2> -->
 
-   <div class="section1 box"></div>
+   <div class="section1 box">
+
+    <div class="card">
+      <img src="IMG/ka.jpg" alt="KasirAbbas">
+    </div>
+    <div class="circle"></div>
+  
+     <h1>Kasir Abbas</h1>
+     
+     <h2>Welcome to my Portfolio</h2>
+
+   </div>
    
    
 
@@ -27,7 +38,7 @@
 
     <h3>Software Developer</h3>
 
-     <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code, tech and birds. Currently completing the CodeNation bootcamp.</p>
+     <p>Hello! Welcome to my portfolio. I'm a Manchester based developer, with a great passion for code, tech and parrots. Currently completing the CodeNation bootcamp.</p>
      <p>I have in depth knowledge of HTML5, CSS3, JavaScript and design. With a desire to learn, no matter how hard it may be, as knowledge is building blocks to better socities.</p>
    </div>
 
