updated image paths

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="hex">
             <a class="hexIn" href="#">
               <img
-                src="../img/projects/spaceInvaders.png"
+                src="./img/projects/spaceInvaders.png"
                 alt="spaceInvaders"
               />
               <h1>Space Invaders</h1>
@@ -57,28 +57,28 @@
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
-              <img src="../img/projects/engUrdu.png" alt="Urdu Dictionary" />
+              <img src="./img/projects/engUrdu.png" alt="Urdu Dictionary" />
               <h1>English to Urdu</h1>
               <p>Code | Demo</p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
-              <img src="../img/projects/Nasa.png" alt="Nasa" />
+              <img src="./img/projects/Nasa.png" alt="Nasa" />
               <h1>Nasa image API</h1>
               <p>Code | Demo</p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="https://github.com/KSR247" target="_blank">
-              <img src="../img/projects/gitHub.png" alt="" />
+              <img src="./img/projects/gitHub.png" alt="" />
               <h1>GitHub</h1>
               <p>More Projects</p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
-              <img src="../img/projects/airport.png" alt="Airport" />
+              <img src="./img/projects/airport.png" alt="Airport" />
               <h1>Airport Runway</h1>
               <p>Code | Demo</p>
             </a>
