Added contact links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Kasir Abbas</title>
   </head>
@@ -30,13 +36,14 @@
       <h2>ABOUT ME</h2>
       <p>
         Hello! Welcome to my portfolio. I'm a Manchester based developer, with a
-        great passion for code, technology and parrots. Having completed the
-        CodeNation 12 weeks bootcamp. I have in-depth knowledge of HTML5, CSS3,
-        JavaScript, NodeJs and React. I’m always open to acquiring new skills to
-        better myself. I pride myself in building projects and outstanding
-        applications using clean, well-commented and structured code.
+        great passion for code, technology and self leanring. Having completed
+        the CodeNation 12 weeks bootcamp I have in-depth knowledge of HTML5,
+        CSS3, JavaScript, NodeJs and React. <br />
+        I’m always open to acquiring new skills to better myself. I pride myself
+        in building projects and outstanding applications using clean,
+        well-commented and structured code.
       </p>
-      <p class="emoji">👨🏽‍🎓👨🏽‍💻</p>
+      <p class="emoji">🎓💻🎧</p>
     </section>
 
     <div class="imageTwo"></div>
@@ -47,10 +54,7 @@
         <ul id="hexGrid">
           <li class="hex">
             <a class="hexIn" href="#">
-              <img
-                src="./img/projects/spaceInvaders.png"
-                alt="spaceInvaders"
-              />
+              <img src="./img/projects/spaceInvaders.png" alt="spaceInvaders" />
               <h1>Space Invaders</h1>
               <p>Code | Demo</p>
             </a>
@@ -106,7 +110,21 @@
 
     <section class="section section-dark">
       <h2>Contact Me</h2>
-      <p></p>
+      <p class="link">
+        <a
+          href="https://www.linkedin.com/in/kasir-abbas-39778a174/"
+          target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/KSR247" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+        <a href="https://www.instagram.com/kasirabbas/" target="_blank"
+          ><i class="fab fa-instagram"></i>
+        </a>
+        <br />
+        <a href="mailto:kabbas@gmail.com">kabbas24@gmail.com</a>
+      </p>
     </section>
 
     <div class="imageFour">
