--- a/index.html
+++ b/index.html
@@ -49,42 +49,61 @@
     <div class="imageTwo"></div>
 
     <section class="section section-dark">
-      <h2>Projects</h2>
+      <h2 class="titles">Projects</h2>
       <div class="hexagons">
         <ul id="hexGrid">
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a
+              class="hexIn"
+              href="http://kasirabbas.me/spaceInvaders/"
+              target="_blank"
+            >
               <img src="./img/projects/spaceInvaders.png" alt="spaceInvaders" />
               <h1>Space Invaders</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                JavaScript + CANVAS
+              </p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
               <img src="./img/projects/engUrdu.png" alt="Urdu Dictionary" />
               <h1>English to Urdu</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                API + REACT
+              </p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
               <img src="./img/projects/Nasa.png" alt="Nasa" />
               <h1>Nasa image API</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                API + REACT
+              </p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="https://github.com/KSR247" target="_blank">
               <img src="./img/projects/gitHub.png" alt="" />
               <h1>GitHub</h1>
-              <p>More Projects</p>
+              <p>
+                More Projects <br />
+                See code
+              </p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
               <img src="./img/projects/airport.png" alt="Airport" />
               <h1>Airport Runway</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                CSS + DOM
+              </p>
             </a>
           </li>
 
@@ -92,14 +111,20 @@
             <a class="hexIn" href="#">
               <img src="./img/projects/wacksAMoes.png" alt="wack a Moes" />
               <h1>Wack-A-Moes</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                JavaScript + DOM
+              </p>
             </a>
           </li>
           <li class="hex">
             <a class="hexIn" href="#">
               <img src="./img/projects/dice.jpg" alt="Dice game" />
               <h1>Dice Game</h1>
-              <p>Code | Demo</p>
+              <p>
+                DEMO <br />
+                JavaScript
+              </p>
             </a>
           </li>
         </ul>
@@ -109,7 +134,7 @@
     <div class="imageThree"></div>
 
     <section class="section section-dark">
-      <h2>Contact Me</h2>
+      <h2 class="titles">Contact Me</h2>
       <p class="link">
         <a
           href="https://www.linkedin.com/in/kasir-abbas-39778a174/"
