--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             </a>
           </li>
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a
+              class="hexIn"
+              href="https://urdutoenglish.herokuapp.com/"
+              target="_blank"
+            >
               <img src="./img/projects/engUrdu.png" alt="Urdu Dictionary" />
               <h1>English to Urdu</h1>
               <p>
@@ -77,7 +81,7 @@
             </a>
           </li>
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a class="hexIn" href="#" target="_blank">
               <img src="./img/projects/Nasa.png" alt="Nasa" />
               <h1>Nasa image API</h1>
               <p>
@@ -97,7 +101,11 @@
             </a>
           </li>
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a
+              class="hexIn"
+              href="http://kasirabbas.me/animation_runway/ "
+              target="_blank"
+            >
               <img src="./img/projects/airport.png" alt="Airport" />
               <h1>Airport Runway</h1>
               <p>
@@ -108,7 +116,11 @@
           </li>
 
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a
+              class="hexIn"
+              href="http://kasirabbas.me/Wack_a_Moes/"
+              target="_blank"
+            >
               <img src="./img/projects/wacksAMoes.png" alt="wack a Moes" />
               <h1>Wack-A-Moes</h1>
               <p>
@@ -118,7 +130,11 @@
             </a>
           </li>
           <li class="hex">
-            <a class="hexIn" href="#">
+            <a
+              class="hexIn"
+              href="http://kasirabbas.me/Dice_Game_2_Player/."
+              target="_blank"
+            >
               <img src="./img/projects/dice.jpg" alt="Dice game" />
               <h1>Dice Game</h1>
               <p>
