--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
             </a>
           </li>
           <li class="hex">
-            <a class="hexIn" href="#" target="_blank">
+            <a
+              class="hexIn"
+              href="https://nasa-api-kasir.herokuapp.com/"
+              target="_blank"
+            >
               <img src="./img/projects/Nasa.png" alt="Nasa" />
               <h1>Nasa image API</h1>
               <p>
