updated about me.
typo's and structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>ABOUT ME</h2>
       <p>
         Hello! Welcome to my portfolio. I'm a Manchester based developer, with a
-        great passion for code, technology and self leanring. Having completed
+        great passion for code, technology and self learning. Having completed
         the CodeNation 12 weeks bootcamp I have in-depth knowledge of HTML5,
         CSS3, JavaScript, NodeJs and React. <br />
         I’m always open to acquiring new skills to better myself. I pride myself
